Fixed css overflows

--- a/styles/light_style.css
+++ b/styles/light_style.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #db4c40;
+}
+
 /* Handling nav & its elements styles */
 
 nav {
